--- a/index.html
+++ b/index.html
@@ -91,12 +91,18 @@
               <h1 class = "heading">
                 Why choose Heriot Watt?
               </h1>
-              <p class="light desc">Heriot-Watt University enjoys an established reputation for world-class teaching and practical, leading-edge research</p>
+              <p class="light desc">Heriot-Watt University enjoys an established reputation for world-class teaching and practical, leading-edge research and sustainable educational practices modelled after real world applications.</p>
               <br>
             </div>
             
           </div>
           <div class="feature_container">
+            <div class="feature">
+              <h1 class="subtitle">Why choose us?</h1>
+              <p class="light_desc feature_text">
+                We were one of the first overseas university to set up in Dubai International academic City, offering quality British education to people in the Gulf area
+              </p>
+            </div>
             <div class="feature">
               
             </div>
@@ -111,6 +117,7 @@
       </div>
     </main>
     <footer></footer>
+    <div class="empty"></div>
     <script type="module" src="main.js"></script>
     <script type="module" src="main/preloader.js"></script>
   </body>
