--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/banner.jpg" />
+    <link rel="icon" type="image/svg+xml" href="public/logo-footer-hw.svg" />
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="utils.css"/>
     <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@200,700,400,600,300,500&display=swap" rel="stylesheet">
